# fixr

./: .gitignore  .gitmodules  MANIFEST.in  README.md  build_xrif_and_generate_bindings.sh  minimal_ex.py  pyproject.toml  setup.py  test_fixr.py
.github/workflows/: build_wheels.yml  publish-to-pypi.yml
example_data/: dm00disp_20250419062518322827132.xrif
src/fixr/: __init__.py  _xrif.py
src/fixr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
