# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fixr"
description = "Python bindings to xrif, the extreme reordered image format"
version = "0.2.1"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# skip pypy, 32bit windows, 32bit linux
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
